--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi-plugin-pfapi-data",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "World Cities Data Set for Pfapi Demo.",
   "strapi": {
     "name": "strapi-plugin-pfapi-data",
@@ -9,6 +9,7 @@
     "displayName": "World Cities Data"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "fs-extra": "^10.1.0",
     "unzipper": "^0.10.11"
   },
