--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi-plugin-pfapi-data",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "World Cities Data Set for Pfapi Demo.",
   "strapi": {
     "name": "strapi-plugin-pfapi-data",
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "fs-extra": "^10.1.0",
+    "strapi-pfapi": "^1.8.7",
     "unzipper": "^0.10.11"
   },
   "author": {
